--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,14 @@
     package="com.smartuniversitygp.smartuniversity">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <permission android:name="com.smartuniversitygp.smartuniversity.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.smartuniversitygp.smartuniversity.permission.C2D_MESSAGE" />
+
+
+
 
     <application
         android:name="com.smartuniversitygp.smartuniversity.app.AppController"
